Preliminary process analysis stuff

--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -1,3 +1,17 @@
--- Description here --
+The main goal of our project was to create a two dimensional map of an unknown environment and autonomously navigate through it, while also fulfilling the learning goals stated in the curriculum for the project.
+\textit{Through theoretical and practical work on a selected problem, the
+students acquire knowledge in the electronics and computer engineering
+discipline, as well as use appropriate methods to document that the
+problem has a relevant social context. The problem is analysed by
+decomposition into sub problems in order to formulate a technical
+problem that can be solved by using analog electronic systems that
+interact with the environment in one way or another. The complete
+solution is assessed with respect to the relevant social context. Compared
+to the first semester, this semester focuses more on the continuous-time
+(analog) aspects of electronic systems as well as interaction with the
+surroundings in greater detail.}
 
+At the start of the project and before the status seminar we discussed our personal learning goals, but also the ones set by the university.  Each member was responsible for achieving their own personal learning goals and in collaboration we aimed to achieve the learning goals set by the university.\\
+
+The group had a few common learnings goals which included learning how to apply analog sensors, knowledge about 2D/3D mapping, improving group collaboration and how to use CAD software.
 \section{Discussion and Conclusion}
