--- a/process-analysis/sections/tools-and-processes.tex
+++ b/process-analysis/sections/tools-and-processes.tex
@@ -1,3 +1,8 @@
--- Description here --
-
+To complete this project successfully many different tools and processes were used. The whole project written using \LaTeX and will also be used to produce the project presentation. Alongside \LaTeX we used Git repository as our version control system, where we used Github as our platform-as-a-service.\\
+Meetings were scheduled using the exchange calender provided by the university, where the meetings were set up a couple of days prior to taking place. During these minutes a note-taker would write down meeting minutes to documents everything that was discussed and to document each group members deadlines. The meeting minutes are posted on our project wiki that is hosted on Github along side our repository. Besides the meeting minutes, many of our other important documents were also hosted on the wiki. This included our time and resource management, group contract and so on.\\
+Peer-reviewing session were scheduled after each major deadline, to discuss the work that each individual had written and to ensure that the quality of the report lived up to expectations.\\
+To produce the code we used the Arduino IDE and BLANK.%no idea what to call the others things
+To keep track of our workflow we used an online Kanban board, where group members encouraged each other to keep it updated with the individual user stories. Deadlines and milestones were set to ensure that we kept on track. A Gantt diagram was \\
+Communication outside of the group was done either through our facebook group or facebook conversation. Emergency or off-site meetings were also at times held over Skype.\\
+The documentation of the development of our prototype was done using various pictures and videos.
 \section{Discussion and Conclusion}
