--- a/process-analysis/process-analysis.tex
+++ b/process-analysis/process-analysis.tex
@@ -5,25 +5,29 @@
 	\pagenumbering{arabic}
 	
 	%Chapter 1  ------------
-	\chapter{Learning Goals}\label{ch:learning-goals}
+	\chapter{Learning Goals}
+	\label{ch:learning-goals}
 	\input{sections/learning-goals.tex}
 	
 	\clearpage
 	
 	%Chapter 2  ------------
-	\chapter{Methods and Models}\label{ch:methods-and-models}
+	\chapter{Methods and Models}
+	\label{ch:methods-and-models}
 	\input{sections/methods-and-models.tex}
 	
 	\clearpage
 	
 	%Chapter 3  ------------
-	\chapter{Tools and Processes}\label{ch:tools-and-processes}
+	\chapter{Tools and Processes}
+	\label{ch:tools-and-processes}
 	\input{sections/tools-and-processes.tex}
 	
 	\clearpage
 	
 	%Chapter 4  ------------
-	\chapter{Documentation}\label{ch:documentation}
+	\chapter{Documentation}
+	\label{ch:documentation}
 	\input{sections/documentation.tex}
 	
 	\clearpage
@@ -35,19 +39,22 @@
 	\clearpage
 	
 	%Chapter 6  ------------
-	\chapter{Time and Resource Management}\label{ch:time-and-resources}
+	\chapter{Time and Resource Management}
+	\label{ch:time-and-resources}
 	\input{sections/time-and-resources.tex}
 	
 	\clearpage
 	
 	%Chapter 7  ------------
-	\chapter{Group Work}\label{ch:group-work}
+	\chapter{Group Work}
+	\label{ch:group-work}
 	\input{sections/group-work.tex}
 	
 	\clearpage
 	
 	%Appendix  ------------
-	\chapter{Appendix}\label{ch:appendix}
+	\chapter{Appendix}
+	\label{ch:appendix}
 	\input{sections/appendix.tex}
 	
 \end{document}
