Added some risks
Can’t think of any more

--- a/report/sections/ch2-risk-analysis.tex
+++ b/report/sections/ch2-risk-analysis.tex
@@ -1,4 +1,3 @@
-%TODO: This section has to be filled out after PD has been completed. Should we moved this to Chapter 3, PD, too?
 \clearpage
 \section{Risk management}
 Possible risks that could occur before, during and after the implementation of the proposed 2D mapping system, elaborated in this report, and presented in the form of a table together with a mitigation plan for each and every identified risk.
@@ -12,7 +11,12 @@ Risks are considered on two different scales with 4 levels. As the legend under 
 	\begin{tabular}{ | p{4.5cm} | l | l | p{5cm} |}
 		\hline
 		\bfseries Risk factor & \bfseries Probability & \bfseries Impact & \bfseries Mitigation strategy \\ \hline
-		 &  &  & \\
+		Going over the budget & M & VL & \\ \hline
+		Parts not arriving in time & L & VH & \\ \hline
+		Short-circuiting electronics during development & VL & H & \\ \hline
+		Lack of knowledge about ROS & M & H & \\ \hline
+		Compatibility issues or lack of support for hardware & L & VH & \\ \hline
+		Too big of a scope and too little time to complete & H & H & \\
 	\hline
 	\end{tabular}
 	\caption{Risk management and mitigation}
