Mitigation strategy added, clearpage removed

--- a/report/sections/ch2-preliminary-research.tex
+++ b/report/sections/ch2-preliminary-research.tex
@@ -111,7 +111,6 @@ Refraction would cause rangefinders to become effectively blind, as neither thei
 	\label{fig:refractionIMG}
 \end{figure}
 
-\clearpage
 \subsection{Autonomous Vehicles and Robots}
 
 Autonomous robots or vehicles can work for an extended period of time, gathering information from its surroundings, to be able to work without human interaction. The robot or vehicle gathers different kinds of data, depending on what the goal of the device is. Positional data can be utilized for navigation and path finding in a known and unknown environment. Intelligent autonomous robots and vehicles are able to adapt to changes happening in its surroundings.
@@ -206,11 +205,4 @@ Planets with an atmosphere can be much harder to cope with. On these planets the
 
 \subsubsection{Terrain}
 Earth-like planets are, by definition, rocky/sandy planets, which tend to have mountains, canyons, and craters.
-Earth-like planets do not have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
-
-%TODO: Help out this section or discuss it's place.
-%\subsection{Equipment}
-%\subsubsection{Drones}
-%An unmanned aerial vehicle (UAV), commonly known as a drone and also referred to as an unpiloted aerial vehicle and a remotely piloted aircraft (RPA).
-%\subsubsection{Rovers}
-%Main features of rovers are: reliability, compactness and autonomy.
+Earth-like planets do not have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.
