health and safety added

--- a/report/sections/ch2-health-safety-analysis.tex
+++ b/report/sections/ch2-health-safety-analysis.tex
@@ -1,16 +1,11 @@
 \clearpage
 \section{Health and Safety analysis}
 
-%Implementing an electrical solution into a bicycle shed can pose a threat when it comes to electrical wires. It is important that the different weather conditions are kept in mind when dealing with outdoor electrical circuits, where there might 14 Chapter 2. Problem Analysis be harmful or potentially lethal electrical conditions. Rainy weather, heavy fog and general moisture are some of the weather conditions that pose a safety threat towards our electrical circuits. All of the materials mentioned in the previous section, that were examined from an environmental standpoint, does not have any direct health concerns towards end users. For example, ABS plastic is only hazardous when heated up during production, as it may produce fumes of acrylonitrile, that is acutely toxic and highly flammable [19].
+In the following section we analyse and review the classification of the laser product of choice, the LIDAR-Lite rangefinder laser. This laser product emits laser radiation and it is designated as a Class 1 laser product during all procedures of operation. This means that the laser is safe to look at with the unaided eye, however, it is very advisable to avoid looking into the beam and power the module off when not in use.
+%TODO: ref{http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety}
 
-% ==================== Text to add
+The operation of LIDAR-Lite without a housing and optics or modification of the housing or optics that exposes the laser source may result in direct exposure to laser radiation and the risk of permanent eye damage. Removal or modification of the diffuser in front of the laser optic may result in the risk of permanent eye damage and the declassification of the laser. The product is also RoHS compliant.
+%TODO: ref{https://www.sparkfun.com/products/13167}
 
-% http://en.wikipedia.org/wiki/Laser_safety#Class_1
-
-%http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety
-
-% "Note: The LIDAR Lite is designated as Class 1 during all procedures of operation, however operating the sensor without its optics or housing or making modifications to the housing can result in direct exposure to laser radiation and the risk of permanent eye damage. Direct eye contact should be avoided and under no circumstances should you ever stare straight into the emitter."
-
-% "CLASS 1 LASER PRODUCT CLASSIFIED EN/IEC 60825-1 2007. Complies with US FDA performance standards for laser products except for deviations pursuant to Laser Notice No. 50, dated June 24, 2007. System contains no user serviceable components. Repair or service of the system is only to be handled by factory-trained technicians. No Service by the user is allowed."
-
-% ROHS complian and Class 1 laser - removing the casing can cause problems and decalssify it
+A Class 1 laser is safe under all conditions of normal use. This means the maximum permissible exposure (MPE) cannot be exceeded when viewing a laser with the naked eye or with the aid of typical magnifying optics (e.g. telescope or microscope). To verify compliance, the standard specifies the aperture and distance corresponding to the naked eye, a typical telescope viewing a collimated beam, and a typical microscope viewing a divergent beam. It is important to realize that certain lasers classified as Class 1 may still pose a hazard when viewed with a telescope or microscope of sufficiently large aperture. For example, a high-power laser with a very large collimated beam or very highly divergent beam may be classified as Class 1 if the power that passes through the apertures defined in the standard is less than the AEL for Class 1; however, an unsafe power level may be collected by a magnifying optic with larger aperture.
+%TODO: ref{http://en.wikipedia.org/wiki/Laser_safety#Class_1}
