--- a/report/sections/ch4-build.tex
+++ b/report/sections/ch4-build.tex
@@ -61,3 +61,8 @@ The project ended up being assembled in two separate parts: The rover with the u
 	\centering
 	\includegraphics[width=.6\linewidth]{images/build_ultrasonic.jpg}
 \end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.6\linewidth]{images/lidarpi.jpg}
+\end{figure}
