--- a/report/P2.tex
+++ b/report/P2.tex
@@ -87,6 +87,8 @@
 \chapter{Testing}\label{ch:testing}
 \input{sections/ch5-testing.tex}
 
+\input{sections/ch5-emil.tex}
+
 %Chapter 6  -----------
 \clearpage
 \chapter{Discussion}\label{ch:discussion}
